force-app/main/default/objects/OPP_SlipInfo__c/fields/Reinsured__c.field-meta.xml
<CustomField>
    <fullName>Reinsured__c</fullName>
    <label>Reinsured</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>