force-app/main/default/objects/OPP_SlipInfo__c/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Slip Informations</relationshipLabel>
    <relationshipName>SlipInformationsbyReinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>