force-app/main/default/objects/OPP_SlipInfo__c/fields/RelatedList_fm__c.field-meta.xml
<CustomField>
    <fullName>RelatedList_fm__c</fullName>
    <formula>IF( ClosingHeader_is__c = true,false,true)</formula>
    <label>Related List</label>
    <type>Checkbox</type>
</CustomField>