force-app/main/default/objects/OPP_SlipInfo__c/fields/RIAddInfo__c.field-meta.xml
<CustomField>
    <fullName>RIAddInfo__c</fullName>
    <label>Additional Information</label>
    <length>624</length>
    <type>Html</type>
</CustomField>