force-app/main/default/objects/OPP_SlipInfo__c/fields/RICession__c.field-meta.xml
<CustomField>
    <fullName>RICession__c</fullName>
    <label>RI Cession(Reins.) (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>