force-app/main/default/objects/OPP_SlipInfo__c/fields/RIComm__c.field-meta.xml
<CustomField>
    <fullName>RIComm__c</fullName>
    <label>RI Comm (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>