force-app/main/default/objects/OPP_SlipInfo__c/fields/RIOtherDeduction__c.field-meta.xml
<CustomField>
    <fullName>RIOtherDeduction__c</fullName>
    <label>Other Deduction</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>