force-app/main/default/objects/OPP_SlipInfo__c/fields/RiskReference__c.field-meta.xml
<CustomField>
    <fullName>RiskReference__c</fullName>
    <label>Risk Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>