force-app/main/default/objects/OPP_SlipInfo__c/fields/SanctionLimit__c.field-meta.xml
<CustomField>
    <fullName>SanctionLimit__c</fullName>
    <defaultValue>&quot;No (re)insurer shall be deemed to provide cover and no (re)insurer shall be liable to pay any claim or provide any benefit hereunder to the extent that the provision of such cover, payment of such claim or provision of such benefit would expose that (re)insurer to any sanction, prohibition or restriction under United Nations resolutions or the trade or economic sanctions, laws or regulations of the European Union, United Kingdom or United States of America.&quot;
&amp;BR()&amp;BR()&amp;
&quot;15/09/10&quot;
&amp;BR()&amp;
&quot;LMA3100&quot;</defaultValue>
    <label>(X)Sanction limitation and exclusion</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>