force-app/main/default/objects/OPP_SlipInfo__c/fields/SignedSlipReceived_is__c.field-meta.xml
<CustomField>
    <fullName>SignedSlipReceived_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed RI Slip Received</label>
    <type>Checkbox</type>
</CustomField>