force-app/main/default/objects/OPP_SlipInfo__c/fields/TaxPayable__c.field-meta.xml
<CustomField>
    <fullName>TaxPayable__c</fullName>
    <defaultValue>&quot;Nil&quot;</defaultValue>
    <label>Tax payable by reinsurers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>