force-app/main/default/objects/OPP_SlipInfo__c/fields/TaxPayableReinAdmin__c.field-meta.xml
<CustomField>
    <fullName>TaxPayableReinAdmin__c</fullName>
    <label>Taxes payable by the reinsured and admin</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>