force-app/main/default/objects/OPP_SlipInfo__c/fields/TermsConds__c.field-meta.xml
<CustomField>
    <fullName>TermsConds__c</fullName>
    <label>Terms and Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>