force-app/main/default/objects/OPP_SlipInfo__c/fields/TerritoryScope__c.field-meta.xml
<CustomField>
    <fullName>TerritoryScope__c</fullName>
    <label>Territory Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>