force-app/main/default/objects/OPP_SlipInfo__c/fields/TorLsw__c.field-meta.xml
<CustomField>
    <fullName>TorLsw__c</fullName>
    <label>TOR/LSW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOR</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>