force-app/main/default/objects/OPP_SlipInfo__c/fields/TotalDeduction__c.field-meta.xml
<CustomField>
    <fullName>TotalDeduction__c</fullName>
    <label>Total Deductions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>