force-app/main/default/objects/OPP_SlipInfo__c/fields/TSI__c.field-meta.xml
<CustomField>
    <fullName>TSI__c</fullName>
    <label>Total Sum Insured</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>