force-app/main/default/objects/OPP_SlipInfo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedant Offer</fullName>
            </value>
            <value>
                <fullName>Cedant Closing</fullName>
            </value>
            <value>
                <fullName>RI Offer</fullName>
            </value>
            <value>
                <fullName>RI Closing</fullName>
            </value>
            <value>
                <fullName>RQ</fullName>
            </value>
            <value>
                <fullName>Endorse</fullName>
            </value>
            <value>
                <fullName>Cedant Endorsement</fullName>
            </value>
            <value>
                <fullName>RI Endorsement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>