force-app/main/default/objects/OPP_SlipInfo__c/fields/WrittenLines__c.field-meta.xml
<CustomField>
    <fullName>WrittenLines__c</fullName>
    <defaultValue>&quot;In a co-reinsurance placement, following Reinsurers may, but are not obliged to, follow the premium charged by the Slip Leader.&quot;
&amp;BR()&amp;BR()&amp;
&quot;Reinsurers may not seek to guarantee for themselves terms as favourable as those which others subsequently achieved during the placement.&quot;</defaultValue>
    <label>(X)Written lines</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>