force-app/main/default/objects/OPP_SlipInfo__c/recordTypes/RQ.recordType-meta.xml
<RecordType>
    <fullName>RQ</fullName>
    <active>true</active>
    <label>Risk Detail</label>
</RecordType>