force-app/main/default/objects/OPP_SlipInfo__c/recordTypes/Slip.recordType-meta.xml
<RecordType>
    <fullName>Slip</fullName>
    <active>true</active>
    <label>Slip</label>
</RecordType>