force-app/main/default/objects/OPP_SlipInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TorLsw__c</columns>
    <columns>Type__c</columns>
    <columns>RIType__c</columns>
    <columns>PremiumPaymentTermDays__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>